Gradients and shit
added gradients on all activities

--- a/Workout/res/values/colors.xml
+++ b/Workout/res/values/colors.xml
@@ -3,5 +3,7 @@
     
     <color name="red">#FF5656</color>
     <color name="dark_red">#981C26</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
         
 </resources>
