--- a/Workout/res/drawable/main_gradient.xml
+++ b/Workout/res/drawable/main_gradient.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+    android:shape="rectangle" >
 
     <gradient
-        android:type="radial"
+        android:endColor="@color/dark_red"
         android:gradientRadius="700"
         android:startColor="@color/red"
-        android:endColor="@color/dark_red"/>
+        android:type="radial" />
+
 </shape>
