--- a/Workout/res/layout/activity_guide.xml
+++ b/Workout/res/layout/activity_guide.xml
@@ -3,19 +3,22 @@
     android:id="@+id/pager"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GuideActivity">
+    android:background="@drawable/main_gradient"
+    tools:context=".GuideActivity" >
 
     <!--
     This title strip will display the currently visible page title, as well as the page
-    titles for adjacent pages.
+    titles for adjacent pages.
     -->
-    <android.support.v4.view.PagerTitleStrip android:id="@+id/pager_title_strip"
+
+    <android.support.v4.view.PagerTitleStrip
+        android:id="@+id/pager_title_strip"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
-        android:background="#33b5e5"
-        android:textColor="#fff"
+        android:background="@color/white"
+        android:paddingBottom="4dp"
         android:paddingTop="4dp"
-        android:paddingBottom="4dp" />
+        android:textColor="@color/black" />
 
 </android.support.v4.view.ViewPager>
