--- a/Workout/res/layout/splashscreen.xml
+++ b/Workout/res/layout/splashscreen.xml
@@ -2,14 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical"
-    android:background="@drawable/main_gradient" >
-    
-        <ImageView
+    android:background="@drawable/main_gradient"
+    android:orientation="vertical" >
+
+    <ImageView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:scaleType="fitCenter"
-        android:src="@drawable/splash" 
-        />
+        android:src="@drawable/splash" />
 
 </LinearLayout>
