Added icons and stuff

--- a/Workout/res/values/colors.xml
+++ b/Workout/res/values/colors.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     
-    <color name="red">#FF5656</color>
-    <color name="dark_red">#981C26</color>
+   <!-- <color name="red">#FF5656</color> -->
+   <!-- <color name="dark_red">#981C26</color> -->
+   <color name="dark_red">#5e191e</color>
+   <color name="red">#c55059</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
         
