Minor tweaks to main

--- a/Workout/res/layout/tab1.xml
+++ b/Workout/res/layout/tab1.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical" >
  
     <TextView
-        android:id="@+id/tv_main1"
+        android:id="@+id/tv_log1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/tv_welcomeMessage"
@@ -16,44 +16,6 @@
         android:layout_marginRight="20dp"
         android:layout_marginBottom="0dp"
         android:padding="10dp" />
-    
-    <TextView
-        android:id="@+id/tv_main2"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/tv_welcomeMessage"
-        android:background="#fff"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="0dp"
-        android:padding="10dp"
-        android:layout_below="@id/tv_main1" />
-    
-    <TextView
-        android:id="@+id/tv_main3"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/tv_welcomeMessage"
-        android:background="#fff"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="0dp"
-        android:padding="10dp"
-        android:layout_below="@id/tv_main2" />
-    <TextView
-        android:id="@+id/tv_main4"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/tv_welcomeMessage"
-        android:background="#fff"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="0dp"
-        android:padding="10dp"
-        android:layout_below="@id/tv_main3" />
    
  
 </RelativeLayout>
