--- a/Workout/res/menu/activity_main.xml
+++ b/Workout/res/menu/activity_main.xml
@@ -1,6 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/menu_settings"
-        android:title="@string/menu_settings"
+        android:title="@string/str_menu_settings"
         android:orderInCategory="100"
         android:showAsAction="never" />
+    <item android:id="@+id/menu_music"
+        android:title="@string/str_menu_music"
+        android:icon="@drawable/ic_action_play"
+        android:showAsAction="ifRoom|withText" />
 </menu>
