Added navigation to all activites - activity_guide.xml, activity_main.xml, activity_settings.xml in /res/menu -- Added an item for each actionbar setting
- strings.xml
-- Changed the name of the title string for SettingsActivity.java, this was named LogActivity for some reason

- GuideActivity.java, MainActivity.java, SettingsActivity.java
-- Changed from switch to if-statements since there are no else in this scenario, I'm dumb etc

- You can easily add or remove actionbar items by editing xml from res/menu and the onOptionsItemSelected function in the respected class.

--- a/Workout/res/menu/activity_guide.xml
+++ b/Workout/res/menu/activity_guide.xml
@@ -3,4 +3,12 @@
         android:title="@string/str_menu_settings"
         android:orderInCategory="100"
         android:showAsAction="never" />
+    <item android:id="@+id/menu_music"
+        android:title="@string/str_menu_music"
+        android:icon="@drawable/ic_action_play"
+        android:showAsAction="ifRoom|withText" />
+    <item android:id="@+id/menu_guide"
+        android:title="@string/str_menu_guide"
+        android:orderInCategory="100"
+        android:showAsAction="never" />
 </menu>
