--- a/Workout/res/menu/activity_main.xml
+++ b/Workout/res/menu/activity_main.xml
@@ -7,4 +7,8 @@
         android:title="@string/str_menu_music"
         android:icon="@drawable/ic_action_play"
         android:showAsAction="ifRoom|withText" />
+    <item android:id="@+id/menu_guide"
+        android:title="@string/str_menu_guide"
+        android:orderInCategory="100"
+        android:showAsAction="never" />
 </menu>
