Music button and help popups
Music button works, help button added (needs better image), help dialog added (nothing in it, and no way for it to display info on the current page).

--- a/Workout/res/menu/activity_main.xml
+++ b/Workout/res/menu/activity_main.xml
@@ -11,4 +11,9 @@
         android:title="@string/str_menu_guide"
         android:orderInCategory="100"
         android:showAsAction="never" />
+    <item android:id="@+id/menu_help"
+        android:title="@string/str_menu_help"
+        android:icon="@drawable/ic_menu_help"
+        android:orderInCategory="100"
+        android:showAsAction="ifRoom|withText" />
 </menu>
