--- a/Workout/res/layout/activity_settings.xml
+++ b/Workout/res/layout/activity_settings.xml
@@ -4,12 +4,54 @@
     android:layout_height="match_parent"
     android:background="@drawable/main_gradient" >
 
+    <!-- This is temporary. Holy shit -->
+    
     <TextView
+        android:id="@+id/set_headline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/hello_world"
+        android:padding="8dp"
+        android:text="@string/set_main"
+        tools:context=".LogActivity" />
+    
+    <TextView
+        android:id="@+id/set_weight"
+        android:layout_below="@id/set_headline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:padding="8dp"
+        android:text="@string/set_weight"
+        tools:context=".LogActivity" />
+    
+    <RadioGroup
+        android:id="@+id/set_weight_rg"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_centerHorizontal="true"
+	    android:orientation="horizontal"
+	    android:layout_below="@id/set_weight">
+	    
+	    <RadioButton 
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:text="@string/set_kg_rb" />
+	    
+	    <RadioButton 
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:text="@string/set_lbs_rb"/>
+    </RadioGroup>
+    
+    <TextView
+        android:id="@+id/set_reset"
+        android:layout_below="@id/set_weight_rg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:padding="8dp"
+        android:text="@string/set_reset"
         tools:context=".LogActivity" />
 
 </RelativeLayout>
