--- a/Workout/res/values/styles.xml
+++ b/Workout/res/values/styles.xml
@@ -1,5 +1,14 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <style name="AppTheme" parent="android:Theme.Light" />
-
+    
+    <style name="style_whiteBox">
+        <item name="android:background">#fff</item>
+        <item name="android:layout_marginTop">20dp</item>
+        <item name="android:layout_marginLeft">20dp</item>
+        <item name="android:layout_marginRight">20dp</item>
+        <item name="android:layout_marginBottom">0dp</item>
+        <item name="android:padding">10dp</item>
+    </style>
+    
 </resources>
