--- a/Workout/res/layout/activity_main.xml
+++ b/Workout/res/layout/activity_main.xml
@@ -6,10 +6,7 @@
     android:background="@drawable/main_gradient"
     tools:context=".MainActivity" >
 
-    <!--
-    This title strip will display the currently visible page title, as well as the page
-    titles for adjacent pages.
-    -->
+    <!-- This title strip will display the currently visible page title, as well as the page titles for adjacent pages. -->
 
     <android.support.v4.view.PagerTitleStrip
         android:id="@+id/pager_title_strip"
