--- a/Workout/res/values/styles.xml
+++ b/Workout/res/values/styles.xml
@@ -40,4 +40,11 @@
         <item name="android:padding">5dp</item>
     </style>
     
+    <style name="style_bigWhiteText">
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textColor">#fff</item>
+        <item name="android:textSize">25dp</item>
+        <item name="android:padding">5dp</item>
+    </style>
+    
 </resources>
