--- a/Workout/res/layout/activity_main.xml
+++ b/Workout/res/layout/activity_main.xml
@@ -16,6 +16,9 @@
         android:background="@color/white"
         android:paddingBottom="4dp"
         android:paddingTop="4dp"
-        android:textColor="@color/black" />
+        android:textColor="@color/black"
+        android:shadowColor="#000"
+        android:shadowRadius="5"
+        android:shadowDy="3" />
 
 </android.support.v4.view.ViewPager>
