--- a/Workout/res/layout/tab1.xml
+++ b/Workout/res/layout/tab1.xml
@@ -16,7 +16,7 @@
 	        android:text="@string/tv_welcomeMessage"
 	        style="@style/style_bigWhiteText"
 	        android:layout_marginTop="15dp"
-	        android:textSize="19sp"
+	        android:textSize="13sp"
 	        android:textAllCaps="false"
 	        android:layout_marginLeft="10dp"
 	        android:layout_marginRight="10dp"
@@ -47,7 +47,7 @@
 	        	android:id="@+id/log_squatsDetailed"
 	        	android:layout_width="wrap_content"
 	        	android:layout_height="fill_parent"
-	        	android:textSize="19sp"
+	        	android:textSize="15sp"
 	        	android:gravity="center_vertical"
 	        />
 	    	
@@ -103,7 +103,7 @@
 	        	android:id="@+id/log_benchPressDetailed"
 	        	android:layout_width="wrap_content"
 	        	android:layout_height="fill_parent"
-	        	android:textSize="19sp"
+	        	android:textSize="15sp"
 	        	android:gravity="center_vertical"
 	        />
 	    	
@@ -158,7 +158,7 @@
 	        	android:id="@+id/log_rowingDetailed"
 	        	android:layout_width="wrap_content"
 	        	android:layout_height="fill_parent"
-	        	android:textSize="19sp"
+	        	android:textSize="15sp"
 	        	android:gravity="center_vertical"
 	        />
 	    	
@@ -213,7 +213,7 @@
 	        	android:id="@+id/log_deadliftDetailed"
 	        	android:layout_width="wrap_content"
 	        	android:layout_height="fill_parent"
-	        	android:textSize="19sp"
+	        	android:textSize="15sp"
 	        	android:gravity="center_vertical"
 	        />
 	    	
@@ -269,7 +269,7 @@
 	        	android:id="@+id/log_ohpDetailed"
 	        	android:layout_width="wrap_content"
 	        	android:layout_height="fill_parent"
-	        	android:textSize="19sp"
+	        	android:textSize="15sp"
 	        	android:gravity="center_vertical"
 	        />
 	    	
@@ -280,23 +280,29 @@
 	    	    >
 	    		<CheckBox android:id="@+id/log_ohp_cb1"
 	        		android:layout_width="wrap_content"
-	        		android:layout_height="wrap_content"/>
+	        		android:layout_height="wrap_content"
+	        		android:text="1"
+	        		/>
 	    		
 	    		<CheckBox android:id="@+id/log_ohp_cb2"
 	        		android:layout_width="wrap_content"
-	        		android:layout_height="wrap_content"/>
+	        		android:layout_height="wrap_content"
+	        		android:text="2"/>
 	    		
 	    		<CheckBox android:id="@+id/log_ohp_cb3"
 	        		android:layout_width="wrap_content"
-	        		android:layout_height="wrap_content"/>
+	        		android:layout_height="wrap_content"
+	        		android:text="3"/>
 	    		
 	    		<CheckBox android:id="@+id/log_ohp_cb4"
 	        		android:layout_width="wrap_content"
-	        		android:layout_height="wrap_content"/>
+	        		android:layout_height="wrap_content"
+	        		android:text="4"/>
 	    		
 	    		<CheckBox android:id="@+id/log_ohp_cb5"
 	        		android:layout_width="wrap_content"
 	        		android:layout_height="wrap_content"
+	        		android:text="5"
 	        		/>
 	        </LinearLayout>
 	        
