--- a/Workout/res/layout/activity_guide.xml
+++ b/Workout/res/layout/activity_guide.xml
@@ -16,9 +16,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
-        android:background="@color/white"
+        android:background="@color/gray"
         android:paddingBottom="4dp"
         android:paddingTop="4dp"
-        android:textColor="@color/black" />
+        android:textColor="@color/red" />
 
 </android.support.v4.view.ViewPager>
