--- a/Workout/res/values/colors.xml
+++ b/Workout/res/values/colors.xml
@@ -7,5 +7,6 @@
    <color name="red">#c55059</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
+    <color name="gray">#252525</color>
         
 </resources>
