--- a/Workout/res/layout/tab1.xml
+++ b/Workout/res/layout/tab1.xml
@@ -45,10 +45,7 @@
 	        
 	    	<TextView 
 	        	android:id="@+id/log_squatsDetailed"
-	        	android:layout_width="wrap_content"
-	        	android:layout_height="fill_parent"
-	        	android:textSize="19sp"
-	        	android:gravity="center_vertical"
+	        	style="@style/style_logDetailed"
 	        />
 	    	
 	    	<LinearLayout
@@ -100,11 +97,8 @@
 	        >
 	        
 	    	<TextView 
-	        	android:id="@+id/log_benchPressDetailed"
-	        	android:layout_width="wrap_content"
-	        	android:layout_height="fill_parent"
-	        	android:textSize="19sp"
-	        	android:gravity="center_vertical"
+	        	android:id="@+id/log_benchPressDetailed" 	
+	        	style="@style/style_logDetailed"
 	        />
 	    	
 	    	<LinearLayout
@@ -156,10 +150,7 @@
 	        
 	    	<TextView 
 	        	android:id="@+id/log_rowingDetailed"
-	        	android:layout_width="wrap_content"
-	        	android:layout_height="fill_parent"
-	        	android:textSize="19sp"
-	        	android:gravity="center_vertical"
+	        	style="@style/style_logDetailed"
 	        />
 	    	
 	    	<LinearLayout
@@ -211,10 +202,7 @@
 	        
 	    	<TextView 
 	        	android:id="@+id/log_deadliftDetailed"
-	        	android:layout_width="wrap_content"
-	        	android:layout_height="fill_parent"
-	        	android:textSize="19sp"
-	        	android:gravity="center_vertical"
+	        	style="@style/style_logDetailed"
 	        />
 	    	
 	    	<LinearLayout
@@ -267,10 +255,7 @@
 	        
 	    	<TextView 
 	        	android:id="@+id/log_ohpDetailed"
-	        	android:layout_width="wrap_content"
-	        	android:layout_height="fill_parent"
-	        	android:textSize="19sp"
-	        	android:gravity="center_vertical"
+	        	style="@style/style_logDetailed"
 	        />
 	    	
 	    	<LinearLayout
