--- a/Workout/res/values/styles.xml
+++ b/Workout/res/values/styles.xml
@@ -3,7 +3,8 @@
     <style name="AppTheme" parent="android:Theme.Light" />
     
     <style name="style_whiteBoxCapsBold">
-        <item name="android:background">#fff</item>
+        <item name="android:background">#333</item>
+        <item name="android:textColor">#FFF</item>
         <item name="android:layout_marginTop">5dp</item>
         <item name="android:layout_marginLeft">10dp</item>
         <item name="android:layout_marginRight">10dp</item>
@@ -14,16 +15,18 @@
     </style>
     
     <style name="style_whiteBoxRegular">
-        <item name="android:background">#fff</item>
+        <item name="android:background">#333</item>
         <item name="android:layout_marginTop">5dp</item>
         <item name="android:layout_marginLeft">10dp</item>
         <item name="android:layout_marginRight">10dp</item>
         <item name="android:layout_marginBottom">5dp</item>
+        <item name="android:textColor">#FFF</item>
         <item name="android:padding">5dp</item>
     </style>
     
     <style name="style_whiteBoxCapsRegular">
-        <item name="android:background">#fff</item>
+        <item name="android:background">#333</item>
+        <item name="android:textColor">#FFF</item>
         <item name="android:layout_marginTop">5dp</item>
         <item name="android:layout_marginLeft">10dp</item>
         <item name="android:layout_marginRight">10dp</item>
@@ -41,10 +44,28 @@
     </style>
     
     <style name="style_bigWhiteText">
-        <item name="android:textAllCaps">true</item>
-        <item name="android:textColor">#fff</item>
-        <item name="android:textSize">25dp</item>
-        <item name="android:padding">5dp</item>
+        <item name="android:textAllCaps">	true</item>
+        <item name="android:textColor">		#fff</item>
+        <item name="android:textSize">		25dp</item>
+        <item name="android:padding">		5dp</item>
     </style>
+    
+    <style name="style_logDetailed">
+        <item name="android:layout_width">	wrap_content</item>
+        <item name="android:layout_height">	fill_parent</item>
+        <item name="android:textSize">		19sp</item>
+        <item name="android:textColor">		#FFF</item>
+        <item name="android:gravity">		center_vertical</item>        
+    </style>
+    
+    <!-- Theme for the guide textviews -->
+    <style name="style_guide">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:typeface">sans</item>
+        <item name="android:textColor">#fff</item>
+        <item name="android:background">#333</item>
+        <item name="android:padding">5dp</item>
+        <item name="android:textSize">15sp</item></style>
     
 </resources>
