--- a/Workout/res/menu/activity_settings.xml
+++ b/Workout/res/menu/activity_settings.xml
@@ -5,7 +5,7 @@
         android:showAsAction="never" />
     <item android:id="@+id/menu_music"
         android:title="@string/str_menu_music"
-        android:icon="@drawable/ic_action_play"
+        android:icon="@drawable/ic_music"
         android:showAsAction="ifRoom|withText" />
     <item android:id="@+id/menu_guide"
         android:title="@string/str_menu_guide"
