--- a/Workout/res/values/styles.xml
+++ b/Workout/res/values/styles.xml
@@ -66,6 +66,17 @@
         <item name="android:textColor">#fff</item>
         <item name="android:background">#333</item>
         <item name="android:padding">5dp</item>
+        
         <item name="android:textSize">15sp</item></style>
+        
+    <!-- Log Workout Checkbox Style -->
+    <style name="cbStyle">
+        <item name="android:layout_height">32px</item>
+        <item name="android:layout_width">32px</item>
+        <item name="android:background">@drawable/unchecked</item>
+        <item name="android:layout_margin">5dp</item>
+        
+    </style>
+    
     
 </resources>
