--- a/Workout/res/layout/guide_tab6.xml
+++ b/Workout/res/layout/guide_tab6.xml
@@ -3,34 +3,13 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/guidetab6"
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:gravity="center"
+    android:gravity="top"
     android:orientation="vertical" >
     
     <TextView 
-        android:id="@+id/tv_guidetab6"
-    	android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        style="@style/style_whiteBoxRegular"/>
-    
-  	    <TextView 
-        android:id="@+id/tv_guidetab6_video"
-        android:gravity="center"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/guide_tv_video"
-        android:textSize="15sp" />
-    
-    <View
-        android:layout_width="fill_parent"
-        android:layout_margin="5dp"
-        android:layout_height="2dp"
-        android:background="#31B6E7" />
-
-    <VideoView
-        android:id="@+id/vi_guidetab6"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+        android:id="@+id/tv_rowingGuide"
+        style="@style/style_guide"/>
     
 </LinearLayout>
