--- a/Workout/res/values/styles.xml
+++ b/Workout/res/values/styles.xml
@@ -64,8 +64,12 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:typeface">sans</item>
         <item name="android:textColor">#fff</item>
-        <item name="android:background">#333</item>
-        <item name="android:padding">5dp</item>
-        <item name="android:textSize">15sp</item></style>
+        
+        <item name="android:padding">10dp</item>
+        <item name="android:textSize">17sp</item>
+        <item name="android:layout_marginTop">5dp</item>
+    	<item name="android:layout_marginLeft">5dp</item>
+        <item name="android:layout_marginRight">5dp</item>    
+    </style>
     
 </resources>
